--- a/Assets/pages/Player1/Osino1.html
+++ b/Assets/pages/Player1/Osino1.html
@@ -20,12 +20,12 @@
         value="???" aria-label="Nome do personagem"
         />
         <input id="Nível" class="Level-box" placeholder="Nível" 
-        aria-label="Nível do personagem"
+        aria-label="Nível do personagem" value="1"
         />
       </div>
 
       <div class="subinfo" style="margin-top:8px;">
-        <input id="idade" class="small-input" placeholder="Idade" aria-label="Idade" />
+        <input id="idade" class="small-input" placeholder="Idade" aria-label="Idade" value="11"/>
         <input id="corOlhos" class="small-input" placeholder="Cor dos olhos" value="Caramelo" aria-label="Cor dos olhos" />
       </div>
 
